--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -23,7 +24,7 @@
 			<div class="container">
 				<div class="row justify-content-between">
 						<div class="col-12 col-md d-flex align-items-center">
-							<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+							<p class="mb-0 phone"><span class="mailus">Telefone:</span> <a href="#">+00 1234 567</a> ou <span class="mailus">E-mail:</span> <a href="#">emailsample@email.com</a></p>
 						</div>
 						<div class="col-12 col-md d-flex justify-content-md-end">
 							<div class="social-media">
@@ -42,7 +43,7 @@
 	    <div class="container">
 	    	<a class="navbar-brand" href="index.html">Code<span>View</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="fa fa-bars"></span> Menu
+	          <span class="fa fa-bars"></span> Menu
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
@@ -82,7 +83,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
             <div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-workplace"></span>
+                <span class="glyphicon glyphicon-console"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Desenvolvimento de Software</h3>
@@ -99,7 +100,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
           	<div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-pool"></span>
+                <span class="glyphicon glyphicon-link"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Integração de Sistemas</h3>
@@ -116,7 +117,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
             <div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-rug"></span>
+                <span class="glyphicon glyphicon-phone"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Desenvolvimento de Aplicativos Móveis</h3>
@@ -134,7 +135,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
           	<div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-kitchen"></span>
+                <span class="glyphicon glyphicon-globe"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Desenvolvimento de Aplicativos Web</h3>
@@ -152,7 +153,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
             <div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-garden"></span>
+                <span class="glyphicon glyphicon-file"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Desenvolvimento de Sistemas de Gerenciamento de Conteúdo</h3>
@@ -169,7 +170,7 @@
           <div class="col-md-6 col-lg-4 services ftco-animate">
           	<div class="d-block d-flex">
               <div class="icon d-flex justify-content-center align-items-center">
-            		<span class="flaticon-balcony"></span>
+                <span class="glyphicon glyphicon-shopping-cart"></span>
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Desenvolvimento de E-Commerce</h3>
@@ -285,8 +286,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-						<h2 class="footer-heading">Cleaning Company</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+						<h2 class="footer-heading">Code View</h2>
+						<p>Em uma pequena sala, Sarah fundou a Code View com um laptop e um sonho. Com o tempo, sua equipe cresceu e criou sites incríveis. Enfrentaram desafios, ajudaram empresas locais e compartilharam conhecimento. Hoje, a Code View é sinônimo de inovação e sucesso, provando que grandes coisas podem surgir de pequenos começos.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
               <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
               <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -294,7 +295,7 @@
             </ul>
 					</div>
 					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-						<h2 class="footer-heading">Latest News</h2>
+						<h2 class="footer-heading">Novidades</h2>
 						<div class="block-21 mb-4 d-flex">
               <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
               <div class="text">
@@ -319,18 +320,18 @@
             </div>
 					</div>
 					<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
-						<h2 class="footer-heading">Quick Links</h2>
+						<h2 class="footer-heading">Links</h2>
 						<ul class="list-unstyled">
               <li><a href="#" class="py-1 d-block">Home</a></li>
-              <li><a href="#" class="py-1 d-block">About</a></li>
-              <li><a href="#" class="py-1 d-block">Services</a></li>
+              <li><a href="#" class="py-1 d-block">Sobre Nós</a></li>
+              <li><a href="#" class="py-1 d-block">Serviços</a></li>
               <li><a href="#" class="py-1 d-block">Works</a></li>
               <li><a href="#" class="py-1 d-block">Blog</a></li>
-              <li><a href="#" class="py-1 d-block">Contact</a></li>
+              <li><a href="#" class="py-1 d-block">Contatos</a></li>
             </ul>
 					</div>
 					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-						<h2 class="footer-heading">Have a Questions?</h2>
+						<h2 class="footer-heading">Perguntas?</h2>
 						<div class="block-23 mb-3">
               <ul>
                 <li><span class="icon fa fa-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
